--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,8 @@ commands = flake8 chinook_fastapi tests
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+passenv = 
+    DATA_PATH
 deps =
     -r{toxinidir}/requirements_dev.txt
 ; If you want to make tox run the tests with the same versions, create a
